# riscu-jolt

./: .gitmodules  Cargo.toml  NOTES.md  README.md  fibo.trace  setup-integration.sh  tmp.py
.github/workflows/: lints.yml  tests.yml
ext/: README.md
riscu_examples/: .gitignore
riscu_examples/c/: fibo  fibo.c  fibo.s  sha256.c
src/: emulator.rs  expr.rs  lib.rs  main.rs  prover.rs  simulator.rs  tests.rs  utils.rs
src/emulator/: decoder.rs  memory.rs
src/prover/: instruction.rs  jolt_table.rs
src/prover/instruction/: add.rs  and.rs  beq.rs  jal.rs  jalr.rs  mul.rs  sltu.rs  sub.rs  subtable.rs
